--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
-    "framer-motion": "^12.23.6",
+    "flowbite": "^3.1.2",
+    "flowbite-react": "^0.12.3",
+    "framer-motion": "^12.23.9",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.525.0",
     "next": "15.4.2",
+    "ogl": "^1.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "react-simple-typewriter": "^5.0.1",
+    "sass": "^1.89.2",
+    "swiper": "^11.2.10",
     "three": "^0.178.0",
     "vanta": "^0.5.24"
   },
