--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
+    "clsx": "^2.1.1",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.3",
     "framer-motion": "^12.23.9",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.10",
     "next": "15.4.2",
     "ogl": "^1.0.11",
     "react": "19.1.0",
@@ -24,6 +26,7 @@
     "react-simple-typewriter": "^5.0.1",
     "sass": "^1.89.2",
     "swiper": "^11.2.10",
+    "tailwind-merge": "^3.3.1",
     "three": "^0.178.0",
     "vanta": "^0.5.24"
   },
